--- a/about.html
+++ b/about.html
@@ -7,31 +7,31 @@
     <title>Product Details</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="about.js" async defer></script>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Hello</h1>
-    <div id="table"></div>
+    <h1 id="pageTitle">Hello Aditya,</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Attribute</th>
+                <th>Content</th>
+            </tr>
+        </thead>
+        <tbody id="tableBody">
+        </tbody>
+    </table>
+    <div id="thumbnailContainer"></div>
+    <div id="home" class="button" onclick="redirectToHomePage()">Home Page</div>
 </body>
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
 <script>
-    function getUrlParameter(name) {
-        name = name.replace(/[\[\]]/g, "\\$&");
-        var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-            results = regex.exec(window.location.href);
-        if (!results) return null;
-        if (!results[2]) return '';
-        return decodeURIComponent(results[2].replace(/\+/g, " "));
+    function redirectToHomePage() {
+        window.location.href = "index.html";
     }
-    var idValue = getUrlParameter('id');
-    var fetchItem = {
-        url: "https://dummyjson.com/products/" + String(idValue),
-        method: "GET",
-        timeout: 0,
-    };
-    $.ajax(fetchItem).done(function (response) {
-        var jsonData = response;
-        $("#table").text(JSON.stringify(jsonData));
-    });
 </script>
+
 </html>
