--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="script.js" async defer></script>
+    <script src="index.js" async defer></script>
     <script defer type="text/javascript" src="https://cdn3.devexpress.com/jslib/22.1.3/js/dx.web.js"></script>
 
     <link rel="stylesheet" href="styles.css">
@@ -19,6 +19,7 @@
 
 <body>
     <h2>Welcome, Aditya Shanbhag</h2>
+    <div id='Report' class="button"> &#x1F441; Show Report</div>
     <div class="container">
         <div id="selectBox"></div>
         <div class="button">+ Open Form</div>
